--- a/DEBIAN-ARM/control
+++ b/DEBIAN-ARM/control
@@ -1,4 +1,4 @@
-Architecture: amd64
+Architecture: armhf
 Depends: libqt5core5a (>= 5.12.0),
 	 libqt5gui5 (>= 5.12.0),
 	 libqt5widgets5 (>= 5.12.0)
@@ -8,5 +8,5 @@ Priority: optional
 Section: Science
 Version: 2022.07.21
 Description: Dreamy
- Welcome to Dreamy!
+ Welcome to Dreamy on ARM!
  Dreamy is governed by a BSD license. Enjoy!
