--- a/DEBIAN-ARM/control
+++ b/DEBIAN-ARM/control
@@ -1,7 +1,7 @@
 Architecture: armhf
-Depends: libqt5core5a (>= 5.12.0),
-	 libqt5gui5 (>= 5.12.0),
-	 libqt5widgets5 (>= 5.12.0)
+Depends: libqt5core5a,
+	 libqt5gui5,
+	 libqt5widgets5
 Maintainer: f83043e79dc03a0abfbcbc376879a97d66f2cacb@protonmail.ch
 Package: Dreamy
 Priority: optional
