--- a/DEBIAN-ARM32/control
+++ b/DEBIAN-ARM32/control
@@ -8,5 +8,5 @@ Priority: optional
 Section: Science
 Version: 2024.08.15
 Description: Dreamy
- Welcome to Dreamy on ARM!
+ Welcome to Dreamy on PiOS!
  Dreamy is governed by a BSD license. Enjoy!
